--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -8,8 +8,8 @@
 }
 
 body {
-    background-color: cyan;
-    color: rgb(122, 122, 122);
+    background-color: darkcyan;
+    color: rgb(0, 0, 0);
     font-family: "Roboto Slab", serif;
     font-optical-sizing: auto;
     font-weight: 500;
