--- a/src/styles/partials/_mixin.scss
+++ b/src/styles/partials/_mixin.scss
@@ -3,3 +3,8 @@
     justify-content: center;
     align-items: center;
 }
+
+@mixin margin-min {
+    margin-left: 1.5rem;
+    margin-bottom: 1rem;
+}
